# curve-std

./: pyproject.toml
contracts/: error.vy  math.vy  token.vy
contracts/interfaces/: IERC20.vyi  IERC4626.vyi
